[package]
name = "udp-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
crossbeam-channel = "0.5.6"
ctrlc = "3.2.3"
nix = { version = "0.26.1", features = ["net"] }
